tests/safety/reject/deep_recursion.keel
def f(n: int); int:
    if n <= 0:
        return 0
    return f(n - 1)

def main(sys: System); Io:
    println(f(8000000))
